objects/Implementation_Coordinator_Repeatable__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Accum_Feed_To_PBM__c</fullName>
        <label>Batch Accum Feed To PBM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Eligibility_Feed_Includes__c</fullName>
        <label>Batch Eligibility Feed Includes</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Pharmacy_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Group</fullName>
                </value>
                <value>
                    <fullName>Partial Groups</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Eligibility_Feed_To_PBM__c</fullName>
        <label>Batch Eligibility Feed To PBM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_IBVD_Crosswalk_Posted_To_NIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date IBVD/Crosswalk Posted To NIC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_IT_Resource_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date IT Resource Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Estimated_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Estimated Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Final_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Final Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SSCR_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SSCR Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SSCR_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SSCR Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_Deductible__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles Deductible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_Infertility_LTM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles Infertility LTM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_LTM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles LTM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grp_Str_That_Commingles_OOP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grp Str That Commingles OOP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IBVD_Crosswalk_Status__c</fullName>
        <label>IBVD/Crosswalk Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Pharmacy_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posted To NIC</fullName>
                </value>
                <value>
                    <fullName>No Updates Needed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Batch_Accum_List_Grp_Str_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Batch Accum, List Grp Str Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Partial_Batch_Elg_List_Grp_Str_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Partial Batch Elg, List Grp Str Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Coordinator_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Coordinator Tracking ID</label>
        <referenceTo>Implementation_Coordinator__c</referenceTo>
        <relationshipLabel>Implementation Coordinator Repeatables</relationshipLabel>
        <relationshipName>Implementation_Coordinator_Repeatables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <formula>HYPERLINK(Implementation_Coordinator_Tracking_ID__r.Implementation_Tracking_ID__r.Id, Implementation_Coordinator_Tracking_ID__r.Implementation_Tracking_ID__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Tracking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Realtime LITES</fullName>
                </value>
                <value>
                    <fullName>Realtime ODS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Deductible_Commingled__c</fullName>
        <label>Is Deductible Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Infertility_LTM_Commingled__c</fullName>
        <label>Is Infertility LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_LTM_Commingled__c</fullName>
        <label>Is LTM Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_OOP_Commingled__c</fullName>
        <label>Is OOP Commingled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Pharmacy_Applicable__c</fullName>
        <label>Is Pharmacy Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_SSCRs_Applicable__c</fullName>
        <label>Is SSCRs Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_There_Integrated_Rx__c</fullName>
        <label>Is There Integrated Rx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Of_Pharmacy_Benefit_Manager__c</fullName>
        <label>Name Of Pharmacy Benefit Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem Prescription Drug Plan</fullName>
                </value>
                <value>
                    <fullName>Catamaran</fullName>
                </value>
                <value>
                    <fullName>CVS/Caremark</fullName>
                </value>
                <value>
                    <fullName>EnvisionRx</fullName>
                </value>
                <value>
                    <fullName>Express Scripts</fullName>
                </value>
                <value>
                    <fullName>Kroger</fullName>
                </value>
                <value>
                    <fullName>MedImpact</fullName>
                </value>
                <value>
                    <fullName>Navitus</fullName>
                </value>
                <value>
                    <fullName>OptumRx</fullName>
                </value>
                <value>
                    <fullName>Pharmavail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Or_Existing_IBVD_Crosswalk__c</fullName>
        <label>New Or Existing IBVD/Crosswalk</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Pharmacy_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Overall_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Coordinator_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSCR_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSCR Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSCR_Funding_Status__c</fullName>
        <label>SSCR Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved For Requirements</fullName>
                </value>
                <value>
                    <fullName>Approved For Delivery</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Yet Prioritized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSCR_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSCR Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSCR_Status__c</fullName>
        <label>SSCR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSCR In Progress</fullName>
                </value>
                <value>
                    <fullName>SSCR Complete</fullName>
                </value>
                <value>
                    <fullName>SSCR Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Implementation Coordinator Repeatable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Implementation_Coordinator_Local_Implementation_Coordinator_Repeatable</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Coordinator - Local</label>
        <queue>Implementation_Coordinator_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IMPCORDREPEAT-{000000}</displayFormat>
        <label>Impl Coordinator Repeatable Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Coordinator Repeatables</pluralLabel>
    <recordTypes>
        <fullName>National_and_Local_NASCO</fullName>
        <active>true</active>
        <label>National and Local NASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_and_Local_WGS</fullName>
        <active>true</active>
        <label>National and Local WGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>